Now operating 24/7, lets tidy up some bits and remove the BBS..

--- a/bpq32.cfg
+++ b/bpq32.cfg
@@ -3,11 +3,13 @@ LOCATOR=IO80sr
 NODECALL=M7SVN
 NODEALIAS=DORNOD
 
-IDINTERVAL=15
+MAPCOMMENT=144.95 1200 ASFK AX.25
+
+IDINTERVAL=20
 
 AUTOSAVE=1
 
-MINQUAL=10
+MINQUAL=50
 
 EXCLUDE=NOCALL N0CAL
 
@@ -17,13 +19,14 @@ M7SVN BPQ Dorchester
 
 CTEXT:
 Welcome.
-RF ports only active when attended.
-Type RFSTATUS for current RF status.
+
+RF sometimes disabled if antenna in use. Type RFSTATUS for current RF status.
+
+Port 1 144.95
+Port 8 AXIP to GB7NXT
 
 Type ? for list of commands.
 ***
-
-BBS
 
 PORT
   PORTNUM=1
@@ -37,8 +40,8 @@ PORT
   FRACK=4000
   PACLEN=150
   DIGIFLAG=0
-  QUALITY=191
-  MINQUAL=20
+  QUALITY=200
+  MINQUAL=170
   MHEARD=Y
 ENDPORT
 
@@ -46,8 +49,8 @@ PORT
  PORTNUM=8
  ID=GB7NXT-AXIP
  DRIVER=BPQAXIP
- QUALITY=191
- MINQUAL=20
+ QUALITY=100
+ MINQUAL=190
  MAXFRAME=7
  FRACK=7000
  RESPTIME=1000
@@ -80,10 +83,7 @@ PORT
 CMDPORT=61000
 ENDPORT
 
-LINMAIL
 LINCHAT
 
-
-APPLICATION 1,BBS,,M7SVN-1,DORBBS,200
-APPLICATION 2,CHAT,,M7SVN-2,DORCHT,255
-APPLICATION 3,RFSTATUS,c 9 HOST 0 S
+APPLICATION 1,CHAT,,M7SVN-1,DORCHT,255
+APPLICATION 2,RFSTATUS,c 9 HOST 0 S
